discussion/kv_engine/166431/166431_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47318: Address double acking when closing a stream

When the DcpConsumerTask used 'moveFromFront' and took ownership
of DcpResponse, the Buffer::bytes member still accounted for
the size of the DcpResponse.

If a close stream occurred we would add Buffer::bytes to the
FlowControl ack size and then also if the DcpResponse was also
processed the DcpResponse size is also added - a double count.

This is fixed by ensuring Buffer::bytes only accounts for the
items owned by the Buffer::messages queue.

An existing test was already exercising this scenario, but lacked
the correct EXPECTS to catch - now fixed.

Change-Id: Ib1b359d77ffe10bc2390906b187d35ac20e6a39e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-11-25 14:49:33.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-25 14:55:58.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42036/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42036/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3914/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35672/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/passive_stream.cc:1303:41:
error: called object type "unsigned int" is not a function or function pointer
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35672/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14207/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/passive_stream.cc:1303:41: error: called object type "unsigned int" is not a function or function pointer [clang-diagnostic-error]
        bytes -= messages.front().second();
                                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14207/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/passive_stream.cc:1303:41:
error: called object type "unsigned int" is not a function or function pointer [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14207/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15002/ : FAILURE

Compile error at [2021-11-25T14:54:28.055Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/dcp/passive_stream.cc:1303:41:
error: called object type "unsigned int" is not a function or function pointer
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15002/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3838/ : FAILURE

Compile error at [2021-11-25T14:52:03.625Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/dcp/passive_stream.cc:1303:41:
error: called object type "unsigned int" is not a function or function pointer
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3838/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16117/ : FAILURE

Compile error at [2021-11-25T14:53:07.792Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/dcp/passive_stream.cc:1303:42:
error: expression cannot be used as a function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16117/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15830/ : FAILURE

Compile error at [2021-11-25T14:52:03.565Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/dcp/passive_stream.cc:1303:42:
error: expression cannot be used as a function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15830/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16857/ : FAILURE

Compile error at [2021-11-25T14:50:29.185Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/dcp/passive_stream.cc:1303:41:
error: called object type "unsigned int" is not a function or function pointer
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16857/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24211/ : FAILURE

Compile error at [2021-11-25T14:51:59.185Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master@2/kv_engine/engines/ep/src/dcp/passive_stream.cc:1303:41:
error: called object type "unsigned int" is not a function or function pointer
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24211/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13013/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
